# yaru

./: meson.build  meson_options.txt
gnome-shell/src/gnome-shell-sass/: _common.scss
gtk/src/: meson.build  post_install.py
gtk/src/common/: gtk-dark.css.in  gtk.css.in  gtk.gresource.xml.in
gtk/src/flavours/dark/gtk-3.0/: meson.build
gtk/src/flavours/dark/gtk-3.20/: meson-assets.list  meson-scss.list  meson.build
gtk/src/flavours/default/: meson.build
gtk/src/flavours/default/gtk-3.0/: meson-scss.list  meson.build
gtk/src/flavours/default/gtk-3.20/: meson.build
gtk/src/flavours/light/: meson.build
gtk/src/flavours/light/gtk-3.0/: meson-assets.list  meson.build
gtk/src/flavours/light/gtk-3.20/: meson.build
