# Dependencies of the files that need to be compiled
# this is used to state what is common and what is custom per-flavour
gtk3_scss_dependencies = [
  join_paths(meson.current_source_dir(), '_colors-public.scss'),
  join_paths(meson.current_source_dir(), '_ubuntu-colors.scss'),
  join_paths(meson.current_source_dir(), '_colors.scss'),
  join_paths(meson.current_source_dir(), '_common.scss'),
  join_paths(meson.current_source_dir(), '_apps.scss'),
  join_paths(meson.current_source_dir(), '_drawing.scss'),
  join_paths(meson.current_source_dir(), '_tweaks.scss'),
  join_paths(meson.current_source_dir(), '_headerbar.scss'),
]
