# Dependencies of the files that need to be compiled
gtk3_scss_dependencies = [
  meson.current_source_dir(), '_colors-public.scss'),
  meson.current_source_dir(), '_ubuntu-colors.scss'),
  meson.current_source_dir(), '_colors.scss'),
  meson.current_source_dir(), '_common.scss'),
  meson.current_source_dir(), '_drawing.scss'),
]
